feat: update favicon path in app.json and remove icon link from RootLayout; add extra configuration for EAS project ID

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/dp.png"
     },
     "plugins": [
       "expo-router",
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "02515bfa-b9a1-4295-b136-8bc869cf4753"
+      }
     }
   }
 }
